--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </header>
       </nav>
       <section class="td_section1">
+        <img src="Images/h1.png" alt="" class="ws h2" />
+        <img src="Images/h2.png" alt="" class="ws h1" />
         <img src="Images/Ellipse4.png" alt="" class="bg rating_bg h2" />
         <img src="Images/Ellipse3.png" alt="" class="bg rating_bg h1" />
         <div class="section1_div">
@@ -120,12 +122,19 @@
         <img class="image5" src="Images/iphone.png" />
       </section>
       <div class="features">
+        <img src="Images/f1.png" alt="" class="ws f1" />
+        <img src="Images/f2.png" alt="" class="ws f2" />
         <img src="Images/Vector3.png" alt="" class="bg features_bg f1" />
         <img src="Images/Vector2.png" alt="" class="bg features_bg f2" />
         <h3>Features</h3>
         <div>
-          <img src="Images/Feature.png" alt="details of a restaurant" />
-          <p>Read & write reviews</p>
+          <img src="images/Feature.png" alt="" class="display display1" />
+          <img
+            src="Images/preview screen.png"
+            alt="details of a restaurant"
+            class="display display2"
+          />
+          <h2>Read & write reviews</h2>
         </div>
       </div>
 
@@ -136,7 +145,10 @@
           class="bg rating_bg r2"
         />
 
-        <h1>Rate your favorite restaurant</h1>
+        <img src="Images/r1.png" alt="" class="ws r1" />
+        <img src="Images/r2.png" alt="" class="ws r2" />
+
+        <h2 class="td_section2_h2">Rate your favorite restaurant</h2>
         <div class="rating-card">
           <div class="card 1">
             <header><h3>Garden Chicken</h3></header>
@@ -175,19 +187,22 @@
       </section>
       <div class="iphone_container">
         <img src="Images/Vector4.png" alt="" class="bg rating_bg l1" />
-        <img src="Images/Vector5.png" alt="" class="bg rating_bg l2" />
+        <img src="Images/Vector77.png" alt="" class="bg rating_bg l2" />
+
+        <img src="Images/l1.png" alt="" class="ws l1" />
+        <img src="Images/l2.png" alt="" class="ws l2" />
 
         <img
           class="iphone_location_img"
           src="Images/Feature2.png"
           alt="Location of a resturant"
         />
-        <p class="locate_fast">Locate Restaurants fast and easy</p>
+        <h2 class="locate_fast">Locate Restaurants fast and easy</h2>
       </div>
 
       <section class="td_section3">
-        <div>
-          <h3>COMING SOON</h3>
+        <div class="coming-soon-container">
+          <h2>COMING SOON</h2>
           <div class="countdown-container">
             <div class="countdown day">00</div>
             <img class="colom" src="Images/colom_Vector.png" alt="" />
